  AbstractValueLink constructor overloaded with enabledObserver parameter, all the way up through AbstractBeanValueLink, ToggleBeanValueLink and Controls
  UiUtil.showImage() now sets the wait cursor while the image is being loaded and rendered
  InputProviderPanel.isEditAccepted() renamed to isInputAccepted()
  EntityPanel.setActiveDetailPanel() uses SwingUtilities.invokeLater() when setting the linked detail model, selected tab now shown before table model is refreshed
  groupingColumn and aggregateColumn attributes added to Property.ColumnProperty, groupByClause automatically set in EntityDefinitionImpl based on those, also used to exclude a search model for aggregate columns in DefaultEntityTableSearchModel, some spelling errors fixed
  RemoteEntityConnectionImpl now initializes the database connection on construction, so that wrong username or password is handled immediately, in case of connection pool it checks the username and password manually
  Configuration.SERVER_CONNECTION_POOLING_INITIAL now takes a comma separated list of username:password combinations
  Configuration.SERVER_CONNECTION_TIMEOUT added, used int EntityConnectionServer
0.6.3
  ForeignKeySearchModel.getSearchEntities() added
  DefaultForeignKeySearchModel.getSearchEntities() implemented
  DefaultForeignKeySearchModelTest added
  DefaultForeignKeySearchModelTest improved
  DefaultForeignKeySearchModel.getSearchEntities() bug fixed
  ConnectionPoolImplTest, added trying to return a connection with an open transaction to the pool
  DefaultEntityTableModel constructor now throws IllegalArgumentException if searchModel is null or the search model entityID does not match the one supplied as parameter
  DefaultEntityTableModelTest updated accordingly
  AbstractFilteredTableModel, null check added for columnModel parameter
  AbstractFilteredTableModel updated accordingly
  logback.xml no longer included in dist jars
  Util.createRandomString() could not create strings of a fixed length, test added