@@ -8,6 +8,7 @@ import org.jminor.common.model.valuemap.ValueChangeMapEditModel;
 import org.jminor.common.ui.control.LinkType;
 import org.jminor.common.ui.textfield.IntField;
 
+import java.text.Format;
 import java.text.NumberFormat;
 
 /**
@@ -15,17 +16,10 @@ import java.text.NumberFormat;
  */
 public final class IntValueLink<K> extends TextValueLink<K> {
 
-  private static final ThreadLocal<NumberFormat> FORMAT = new ThreadLocal<NumberFormat>() {
-    @Override
-    protected NumberFormat initialValue() {
-      final NumberFormat ret = NumberFormat.getIntegerInstance();
-      ret.setGroupingUsed(false);
-      return ret;
-    }
-  };
+  private final Format format;
 
   /**
-   * Instantiates a new IntValueLink.
+   * Instantiates a new IntValueLink, with a default non-grouping NumberFormat instance.
    * @param textField the int field to link
    * @param editModel the edit model
    * @param key the key of the property to link
@@ -34,7 +28,22 @@ public final class IntValueLink<K> extends TextValueLink<K> {
    */
   public IntValueLink(final IntField textField, final ValueChangeMapEditModel<K, Object> editModel,
                       final K key, final boolean immediateUpdate, final LinkType linkType) {
+    this(textField, editModel, key, immediateUpdate, linkType, initializeDefaultFormat());
+  }
+
+  /**
+   * Instantiates a new IntValueLink.
+   * @param textField the int field to link
+   * @param editModel the edit model
+   * @param key the key of the property to link
+   * @param immediateUpdate if true the model value is update on each keystroke
+   * @param linkType the link type
+   * @param format the format to use when formatting a number before displaying it in the field
+   */
+  public IntValueLink(final IntField textField, final ValueChangeMapEditModel<K, Object> editModel,
+                      final K key, final boolean immediateUpdate, final LinkType linkType, final Format format) {
     super(textField, editModel, key, immediateUpdate, linkType);
+    this.format = format;
   }
 
   /** {@inheritDoc} */
@@ -51,6 +60,12 @@ public final class IntValueLink<K> extends TextValueLink<K> {
   /** {@inheritDoc} */
   @Override
   protected String getValueAsText(final Object value) {
-    return value == null ? "" : FORMAT.get().format(value);
+    return value == null ? "" : format.format(value);
+  }
+
+  private static Format initializeDefaultFormat() {
+    final NumberFormat ret = NumberFormat.getIntegerInstance();
+    ret.setGroupingUsed(false);
+    return ret;
   }
 }
